// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewToolbarTextInput Component should export variants: field variants 1`] = `
{
  "TextInputFilterVariants": {
    "search_by_name": "search_by_name",
    "search_credentials_by_name": "search_credentials_by_name",
    "search_sources_by_name": "search_sources_by_name",
  },
}
`;

exports[`ViewToolbarTextInput Component should handle clearing the view query through redux state with a hook: dispatch onClear, hook 1`] = `
[
  [
    [
      {
        "type": "RESET_PAGE",
        "viewId": undefined,
      },
      {
        "filter": "lorem filter",
        "type": "SET_QUERY",
        "value": "",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ViewToolbarTextInput Component should handle updating the view query through redux state with a component: dispatch type, component 1`] = `
[
  [
    [
      {
        "type": "RESET_PAGE",
        "viewId": undefined,
      },
      {
        "filter": "search_credentials_by_name",
        "type": "SET_QUERY",
        "value": "dolor sit",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ViewToolbarTextInput Component should handle updating the view query through redux state with a hook: dispatch type, hook 1`] = `
[
  [
    [
      {
        "type": "RESET_PAGE",
        "viewId": undefined,
      },
      {
        "filter": "lorem filter",
        "type": "SET_QUERY",
        "value": "dolor sit",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ViewToolbarTextInput Component should render a basic component: basic 1`] = `
<InputGroup>
  <TextInput
    aria-label="t(toolbar.label_placeholder_filter, {"context":"search_credentials_by_name"})"
    className=""
    id={null}
    isDisabled={false}
    isReadOnly={false}
    maxLength={255}
    name={null}
    onChange={[Function]}
    onClear={[Function]}
    onKeyUp={[Function]}
    onMouseUp={[Function]}
    ouiaId="toolbar_search_name"
    placeholder="t(toolbar.label_placeholder_filter, {"context":"search_credentials_by_name"})"
    type="text"
    value={null}
  />
</InputGroup>
`;
